# Light-Years-Game

./: .gitignore  CMakeLists.txt  CMakeSettings.json
LightYears/: CMakeLists.txt
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/: EntryPoint.h
LightYearsEngine/include/VFX/: particle.h
LightYearsEngine/include/framework/: AssetManager.h  BackDropActor.h  BackGroundLayer.h  actor.h  application.h  core.h  delegate.h  math.h  object.h  physics.h  timer.h  world.h
LightYearsEngine/include/gameplay/: gamestage.h  waitstage.h
LightYearsEngine/include/widgets/: HUD.h  ImageWidget.h  TextWidget.h  button.h  guage.h  widget.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/VFX/: particle.cpp
LightYearsEngine/src/framework/: AssetManager.cpp  BackDropActor.cpp  BackGroundLayer.cpp  actor.cpp  application.cpp  delegate.cpp  math.cpp  object.cpp  physics.cpp  timer.cpp  world.cpp
LightYearsEngine/src/gameplay/: gamestage.cpp  waitstage.cpp
LightYearsEngine/src/widgets/: HUD.cpp  ImageWidget.cpp  TextWidget.cpp  button.cpp  guage.cpp  widget.cpp
LightYearsGame/: CMakeLists.txt  config.h.in
LightYearsGame/include/: config.h
LightYearsGame/include/GameFrameWork/: GameApplication.h
LightYearsGame/include/Levels/: MainMenu.h  levelone.h
LightYearsGame/include/Player/: PlayerManager.h  player.h  playerSpaceship.h  reward.h
LightYearsGame/include/SpaceShip/: spaceship.h
LightYearsGame/include/VFX/: explosion.h
LightYearsGame/include/enemy/: BossStage.h  ChaosStage.h  EnemySpaceShip.h  HexagonStage.h  TwinBlade.h  TwinBladeStage.h  UfoStage.h  VanguardStage.h  boss.h  hexagon.h  ufo.h  vanguard.h
LightYearsGame/include/gameplay/: health.h
LightYearsGame/include/weapon/: FrontalWiper.h  bullet.h  bulletshooter.h  shooter.h  threeWayShooter.h
LightYearsGame/include/widgets/: GamePlayHUD.h  MainMenuHUD.h
LightYearsGame/src/GameFrameWork/: GameApplication.cpp
LightYearsGame/src/Levels/: MainMenu.cpp  levelone.cpp
LightYearsGame/src/Player/: PlayerManager.cpp  player.cpp  playerSpaceship.cpp  reward.cpp
LightYearsGame/src/SpaceShip/: spaceship.cpp
LightYearsGame/src/VFX/: explosion.cpp
LightYearsGame/src/enemy/: BossStage.cpp  ChaosStage.cpp  EnemySpaceShip.cpp  HexagonStage.cpp  TwinBlade.cpp  TwinBladeStage.cpp  UfoStage.cpp  VanguardStage.cpp  boss.cpp  hexagon.cpp  ufo.cpp  vanguard.cpp
LightYearsGame/src/gameplay/: health.cpp
LightYearsGame/src/weapon/: FrontalWiper.cpp  bullet.cpp  bulletshooter.cpp  shooter.cpp  threeWayShooter.cpp
LightYearsGame/src/widgets/: GamePlayHUD.cpp  MainMenuHUD.cpp
